--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,12 +1,6 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet", href="css/style.css")
-    title Document
-  body 
-    #root.root
-      .page 
-        h1 Index
+extends ../templates/layout.pug
+block config
+  - var title = 'Home'
+
+block PAGE 
+  h1 HOME
